// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteModal Component should render - no props 1`] = `
<Modal>
  <Panel
    sectioned={true}
  >
    <p />
    <Button
      primary={true}
      size="default"
    >
      Delete
    </Button>
    <Button
      size="default"
    >
      Cancel
    </Button>
  </Panel>
</Modal>
`;

exports[`DeleteModal Component should render closed with props 1`] = `
<Modal
  open={false}
>
  <Panel
    sectioned={true}
    title="NoobNoob"
  >
    <p>
      Got Damn
    </p>
    <Button
      onClick={[Function]}
      primary={true}
      size="default"
    >
      Delete
    </Button>
    <Button
      onClick={[Function]}
      size="default"
    >
      Cancel
    </Button>
  </Panel>
</Modal>
`;

exports[`DeleteModal Component should render open with props 1`] = `
<Modal
  open={true}
>
  <Panel
    sectioned={true}
    title="NoobNoob"
  >
    <p>
      Got Damn
    </p>
    <Button
      onClick={[Function]}
      primary={true}
      size="default"
    >
      Delete
    </Button>
    <Button
      onClick={[Function]}
      size="default"
    >
      Cancel
    </Button>
  </Panel>
</Modal>
`;
